fix dropdown viewing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -626,6 +626,9 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 
 @media (max-width: 767.98px) {
   .custom-navbar {
+    padding-top: 0px;
+  }
+  .custom-navbar .container {
     padding-top: 20px;
   }
   .section {
